
lib_LTLIBRARIES = libmpreader.la
include_HEADERS = mpreader.h MappingProblem.h MappingProblemReader.h RAMappingProblem.h RARemappingProblem.h RemappingProblem.h
libmpreader_la_SOURCES      = mpreader.h ApplicationSpecification.h ArchitectureSpecification.h ArchitectureSpecification.cpp FaultRateSpecification.h Link.h Mapping.h MappingProblem.cpp  MappingProblem.h MappingProblemReader.cpp MappingProblemReader.h ProfilingSpecification.h RAMappingProblem.h RAMappingProblem.cpp RARemappingProblem.h RemappingProblem.h
libmpreader_la_LDFLAGS = -static
#libmpreader_la_LIBADD       = MappingProblem.o MappingProblemReader.o
#libmpreader_a_DEPENDENCIES = dep1 dep2 dep3 ...
