## Process this file with automake to produce Makefile.in


#AM_CPPFLAGS = -O0

lib_LTLIBRARIES = libmomh.la

libmomh_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)

libmomh_la_LIBADD = $(SIGC_LIBS)

libmomh_la_CXXFLAGS = $(SIGC_CFLAGS)

libmomh_la_SOURCES = \
	mosa.cpp \
	smosa.cpp \
	sabase.cpp \
	psa.cpp \
	immogls.cpp \
	hgabase.cpp \
	pma.cpp \
	mogls.cpp \
	tindexedpoint.cpp \
	paretobase.cpp \
	constrainednsgaiic.cpp \
	momsls.cpp \
	trandomgenerator.cpp \
	global.cpp \
	weights.cpp \
	solution.cpp \
	nondominatedset.cpp \
	momethod.cpp \
	solutionsset.cpp \
	tlistset.cpp \
	tquadtree.cpp \
	tbtree.cpp \
	tquadnode.cpp \
	tbnode.cpp \
	tmotools.cpp \
	momhconstrainedsolution.cpp \
	spea.cpp \
	tmatrix.cpp \
	nsga.cpp \
	nsgaii.cpp \
	nsgaiic.cpp


libmomh_includedir = $(includedir)/libmomh/momh
libmomh_include_HEADERS = \
	libmomh.h \
	libmomh-config.h \
	constrainednsgaiic.h \
	global.h \
	hgabase.h \
	immogls.h \
	mogls.h \
	momethod.h \
	momhconstrainedsolution.h \
	momhsolution.h \
	momsls.h \
	mosa.h \
	nondominatedset.h \
	nsga.h \
	nsgaiic.h \
	nsgaii.h \
	paretobase.h \
	pma.h \
	problem.h \
	psa.h \
	sabase.h \
	smosa.h \
	solution.h \
	solutionsset.h \
	spea.h \
	tbnode.h \
	tbtree.h \
	tindexedpoint.h \
	tlistset.h \
	tmatrix.h \
	tmotools.h \
	tquadnode.h \
	tquadtree.h \
	trandomgenerator.h \
	weights.h \
	tmatrix.cpp \
	tlistset.cpp \
	pma.cpp \
	psa.cpp \
	tquadtree.cpp \
	momethod.cpp \
	hgabase.cpp \
	smosa.cpp \
	constrainednsgaiic.cpp \
	immogls.cpp \
	momsls.cpp \
	mogls.cpp \
	nsgaii.cpp \
	mosa.cpp \
	nsga.cpp \
	spea.cpp \
	nsgaiic.cpp \
	sabase.cpp \
	paretobase.cpp
                                                                                
                                                                                

